Iniciamos no projeto Pizzaria juntamente com o professor Arley

--- a/Prof-Arley/PrjPizzaria/index.html
+++ b/Prof-Arley/PrjPizzaria/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 
 <head>
     <meta charset="UTF-8">
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/style.css">
+    <script src="https://kit.fontawesome.com/ebc3101efe.js" crossorigin="anonymous"></script>
     <title>Pizzaria</title>
 </head>
 
@@ -14,15 +15,108 @@
     <!-- Nosso Cabeçalho -->
     <header class="topo">
         <h1 class="topo__marca">JS Pizzas</h1>
-            <span class="topo__titulo">Menu</span>
+        <span class="topo__titulo">Menu</span>
     </header>
 
     <!-- Conteudo Principal do nosso Menu -->
     <main class="conteudo">
         <section class="pizza-cards">
             <div class="pizzas-card__item">
-                <img src="#" alt="" class="pizza-cards__img">
-                <span class="pizzas-cards__preco">R$ 99,99</span>
+                <img src="img/img-produto01.png" alt="" class="pizza-cards__img">
+                <a class="pizzas-cards__btn-add" href="#modal">
+                    <span class="fa-solid fa-circle-plus"></span>
+                </a>
+                <span class="pizzas-cards__preco">R$99,99</span>
+                <span class="pizzas-cards__titulo">Titulo</span>
+                <p class="pizzas-cards__texto">Dois Hamburgueres, alface, queijo, molho...</p>
+            </div>
+
+            <div class="pizzas-card__item">
+                <img src="img/img-produto01.png" alt="" class="pizza-cards__img">
+                <a class="pizzas-cards__btn-add" href="#modal">
+                    <span class="fa-solid fa-circle-plus"></span>
+                </a>
+                <span class="pizzas-cards__preco">R$99,99</span>
+                <span class="pizzas-cards__titulo">Titulo</span>
+                <p class="pizzas-cards__texto">Dois Hamburgueres, alface, queijo, molho...</p>
+            </div>
+
+            <div class="pizzas-card__item">
+                <img src="img/img-produto01.png" alt="" class="pizza-cards__img">
+                <a class="pizzas-cards__btn-add" href="#modal">
+                    <span class="fa-solid fa-circle-plus"></span>
+                </a>
+                <span class="pizzas-cards__preco">R$99,99</span>
+                <span class="pizzas-cards__titulo">Titulo</span>
+                <p class="pizzas-cards__texto">Dois Hamburgueres, alface, queijo, molho...</p>
+            </div>
+
+            <div class="pizzas-card__item">
+                <img src="img/img-produto01.png" alt="" class="pizza-cards__img">
+                <a class="pizzas-cards__btn-add" href="#modal">
+                    <span class="fa-solid fa-circle-plus"></span>
+                </a>
+                <span class="pizzas-cards__preco">R$99,99</span>
+                <span class="pizzas-cards__titulo">Titulo</span>
+                <p class="pizzas-cards__texto">Dois Hamburgueres, alface, queijo, molho...</p>
+            </div>
+
+            <div class="pizzas-card__item">
+                <img src="img/img-produto01.png" alt="" class="pizza-cards__img">
+                <a class="pizzas-cards__btn-add" href="#modal">
+                    <span class="fa-solid fa-circle-plus"></span>
+                </a>
+                <span class="pizzas-cards__preco">R$99,99</span>
+                <span class="pizzas-cards__titulo">Titulo</span>
+                <p class="pizzas-cards__texto">Dois Hamburgueres, alface, queijo, molho...</p>
+            </div>
+
+            <div class="pizzas-card__item">
+                <img src="img/img-produto01.png" alt="" class="pizza-cards__img">
+                <a class="pizzas-cards__btn-add" href="#modal">
+                    <span class="fa-solid fa-circle-plus"></span>
+                </a>
+                <span class="pizzas-cards__preco">R$99,99</span>
+                <span class="pizzas-cards__titulo">Titulo</span>
+                <p class="pizzas-cards__texto">Dois Hamburgueres, alface, queijo, molho...</p>
+            </div>
+
+            <div class="pizzas-card__item">
+                <img src="img/img-produto01.png" alt="" class="pizza-cards__img">
+                <a class="pizzas-cards__btn-add" href="#modal">
+                    <span class="fa-solid fa-circle-plus"></span>
+                </a>
+                <span class="pizzas-cards__preco">R$99,99</span>
+                <span class="pizzas-cards__titulo">Titulo</span>
+                <p class="pizzas-cards__texto">Dois Hamburgueres, alface, queijo, molho...</p>
+            </div>
+
+            <div class="pizzas-card__item">
+                <img src="img/img-produto01.png" alt="" class="pizza-cards__img">
+                <a class="pizzas-cards__btn-add" href="#modal">
+                    <span class="fa-solid fa-circle-plus"></span>
+                </a>
+                <span class="pizzas-cards__preco">R$99,99</span>
+                <span class="pizzas-cards__titulo">Titulo</span>
+                <p class="pizzas-cards__texto">Dois Hamburgueres, alface, queijo, molho...</p>
+            </div>
+
+            <div class="pizzas-card__item">
+                <img src="img/img-produto01.png" alt="" class="pizza-cards__img">
+                <a class="pizzas-cards__btn-add" href="#modal">
+                    <span class="fa-solid fa-circle-plus"></span>
+                </a>
+                <span class="pizzas-cards__preco">R$99,99</span>
+                <span class="pizzas-cards__titulo">Titulo</span>
+                <p class="pizzas-cards__texto">Dois Hamburgueres, alface, queijo, molho...</p>
+            </div>
+            
+            <div class="pizzas-card__item">
+                <img src="img/img-produto01.png" alt="" class="pizza-cards__img">
+                <a class="pizzas-cards__btn-add" href="#modal">
+                    <span class="fa-solid fa-circle-plus"></span>
+                </a>
+                <span class="pizzas-cards__preco">R$99,99</span>
                 <span class="pizzas-cards__titulo">Titulo</span>
                 <p class="pizzas-cards__texto">Dois Hamburgueres, alface, queijo, molho...</p>
             </div>
@@ -47,19 +141,51 @@
     <!-- Nosso Rodapé -->
     <footer>
         <address class="rodape__endereco">
-            Rua das Margaridas, 25 Centro de São Paulo - SP
+            Rua das Margaridas, 25
+            <br> Centro de São Paulo - SP
         </address>
 
-        <div class="rodape__desenvolvedor">
-            Desenvolvido por XPTO Soluções Digitais 
+        <div class="rodape__redes-sociais">
+            <p>Siga-nos nas redes sociais:</p>
+            <span class="fa-brands fa-whatsapp"></span>
+            <span class="fa-brands fa-facebook"></span>
+            <span class="fa-brands fa-instagram"></span>
         </div>
 
-        <div class="rodape__redes-sociais">
-            <img src="" alt="" class="rodape__logo-face">
-            <img src="" alt="" class="rodape__logo-whatsapp">
-            <img src="" alt="" class="rodape__logo-insta">
+        <div class="rodape__desenvolvedor">
+            Desenvolvido por XPTO Soluções Digitais
         </div>
     </footer>
+
+    <div id="modal" class="background-modal">
+        <div class="modal-pizza">
+            <img class="modal-pizza__img" src="img/img-produto01.png" alt="Imagem da pizza Mozzarella">
+            <div class="modal-pizza__detalhes">
+                <a href="#" class="modal-pizza__btn-fechar">Voltar</a>
+                <h1 class="modal-pizza__tx-titulo">Sabor da Pizza</h1>
+                <div class="modal-pizza__tx-ingredientes">lorem ipsum ingredientes</div>
+                <div class="modal-pizza__tx-tamanho">Tamanho</div>
+                <div class="modal-pizza__controle-tamanhos">
+                    <div class="modal-pizza__tamanho">Pequeno <span>320g</span></div>
+                    <div class="modal-pizza__tamanho">Média <span>530g</span></div>
+                    <div class="modal-pizza__tamanho">Grande <span>860g</span></div>
+                </div>
+                <div class="modal-pizza__tx-preco">Preço</div>
+                <div class="modal-pizza__qtd">
+                    <div class="modal-pizza__tx-valor">R$99,99</div>
+                    <div class="modal-pizza__controle-qtd">
+                        <button class="modal-pizza__menos">-</button>
+                        <div class="modal-pizza__tx-qtd">1</div>
+                        <button class="modal-pizza__mais">+</button>
+                    </div>
+                </div>
+                <div class="modal-pizza__btns">
+                    <button class="modal-pizza__btn modal-pizza__btn--adicionar">Adicionar ao carrinho</button>
+                    <button class="modal-pizza__btn modal-pizza__btn--cancelar">Cancelar</button>
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
 
 </html>
