Hoje realizamos a estilização do nosso madal do projeto Pizzaria

--- a/Prof-Arley/PrjPizzaria/index.html
+++ b/Prof-Arley/PrjPizzaria/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/reset.css">
+    <link rel="stylesheet" href="css/vars.css">
     <link rel="stylesheet" href="css/style.css">
     <script src="https://kit.fontawesome.com/ebc3101efe.js" crossorigin="anonymous"></script>
     <title>Pizzaria</title>
@@ -156,6 +157,8 @@
             Desenvolvido por XPTO Soluções Digitais
         </div>
     </footer>
+
+    <!-- Modal -->
 
     <div id="modal" class="background-modal">
         <div class="modal-pizza">
