Realizamos alterações no nosso carrinho e fizemos melhorias em nosso modal, aplicando também midia queries em nosso projeto para trabalharmos e aplicarmos responsividade

--- a/Prof-Arley/PrjPizzaria/index.html
+++ b/Prof-Arley/PrjPizzaria/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/carrinho.css">
     <script src="https://kit.fontawesome.com/ebc3101efe.js" crossorigin="anonymous"></script>
+    <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
     <title>Pizzaria</title>
 </head>
 
@@ -112,7 +113,7 @@
                 <span class="pizzas-cards__titulo">Romeu e Juliets</span>
                 <p class="pizzas-cards__texto">Dois Hamburgueres, alface, queijo, molho...</p>
             </div>
-            
+
             <div class="pizzas-card__item">
                 <img src="img/img-produto01.png" alt="" class="pizza-cards__img">
                 <a class="pizzas-cards__btn-add" href="#modal">
@@ -166,7 +167,167 @@
                     </button>
                 </div>
             </div>
-            
+
+            <div class="carrinho__item">
+                <img src="img/img-produto01.png" alt="" class="carrinho__img">
+                <div class="carrinho__item-tx">
+                    <p class="carrinho__tx">Portuguesa (G)</p>
+                    <p class="carrinho__tx">R$ 59,90</p>
+                </div>
+                <div class="carrinho__qtd-controle">
+                    <button class="carrinho__btn btn--adicionar">
+                        <span class="fa-solid fa-plus"></span>
+                    </button>
+                    <span class="carrinho__qtd">0</span>
+                    <button class="carrinho__btn btn--remover">
+                        <span class="fa-solid fa-minus"></span>
+                    </button>
+                </div>
+            </div>
+            <div class="carrinho__item">
+                <img src="img/img-produto01.png" alt="" class="carrinho__img">
+                <div class="carrinho__item-tx">
+                    <p class="carrinho__tx">Portuguesa (G)</p>
+                    <p class="carrinho__tx">R$ 59,90</p>
+                </div>
+                <div class="carrinho__qtd-controle">
+                    <button class="carrinho__btn btn--adicionar">
+                        <span class="fa-solid fa-plus"></span>
+                    </button>
+                    <span class="carrinho__qtd">0</span>
+                    <button class="carrinho__btn btn--remover">
+                        <span class="fa-solid fa-minus"></span>
+                    </button>
+                </div>
+            </div>
+            <div class="carrinho__item">
+                <img src="img/img-produto01.png" alt="" class="carrinho__img">
+                <div class="carrinho__item-tx">
+                    <p class="carrinho__tx">Portuguesa (G)</p>
+                    <p class="carrinho__tx">R$ 59,90</p>
+                </div>
+                <div class="carrinho__qtd-controle">
+                    <button class="carrinho__btn btn--adicionar">
+                        <span class="fa-solid fa-plus"></span>
+                    </button>
+                    <span class="carrinho__qtd">0</span>
+                    <button class="carrinho__btn btn--remover">
+                        <span class="fa-solid fa-minus"></span>
+                    </button>
+                </div>
+            </div>
+            <div class="carrinho__item">
+                <img src="img/img-produto01.png" alt="" class="carrinho__img">
+                <div class="carrinho__item-tx">
+                    <p class="carrinho__tx">Portuguesa (G)</p>
+                    <p class="carrinho__tx">R$ 59,90</p>
+                </div>
+                <div class="carrinho__qtd-controle">
+                    <button class="carrinho__btn btn--adicionar">
+                        <span class="fa-solid fa-plus"></span>
+                    </button>
+                    <span class="carrinho__qtd">0</span>
+                    <button class="carrinho__btn btn--remover">
+                        <span class="fa-solid fa-minus"></span>
+                    </button>
+                </div>
+            </div>
+            <div class="carrinho__item">
+                <img src="img/img-produto01.png" alt="" class="carrinho__img">
+                <div class="carrinho__item-tx">
+                    <p class="carrinho__tx">Portuguesa (G)</p>
+                    <p class="carrinho__tx">R$ 59,90</p>
+                </div>
+                <div class="carrinho__qtd-controle">
+                    <button class="carrinho__btn btn--adicionar">
+                        <span class="fa-solid fa-plus"></span>
+                    </button>
+                    <span class="carrinho__qtd">0</span>
+                    <button class="carrinho__btn btn--remover">
+                        <span class="fa-solid fa-minus"></span>
+                    </button>
+                </div>
+            </div>
+            <div class="carrinho__item">
+                <img src="img/img-produto01.png" alt="" class="carrinho__img">
+                <div class="carrinho__item-tx">
+                    <p class="carrinho__tx">Portuguesa (G)</p>
+                    <p class="carrinho__tx">R$ 59,90</p>
+                </div>
+                <div class="carrinho__qtd-controle">
+                    <button class="carrinho__btn btn--adicionar">
+                        <span class="fa-solid fa-plus"></span>
+                    </button>
+                    <span class="carrinho__qtd">0</span>
+                    <button class="carrinho__btn btn--remover">
+                        <span class="fa-solid fa-minus"></span>
+                    </button>
+                </div>
+            </div>
+            <div class="carrinho__item">
+                <img src="img/img-produto01.png" alt="" class="carrinho__img">
+                <div class="carrinho__item-tx">
+                    <p class="carrinho__tx">Portuguesa (G)</p>
+                    <p class="carrinho__tx">R$ 59,90</p>
+                </div>
+                <div class="carrinho__qtd-controle">
+                    <button class="carrinho__btn btn--adicionar">
+                        <span class="fa-solid fa-plus"></span>
+                    </button>
+                    <span class="carrinho__qtd">0</span>
+                    <button class="carrinho__btn btn--remover">
+                        <span class="fa-solid fa-minus"></span>
+                    </button>
+                </div>
+            </div>
+            <div class="carrinho__item">
+                <img src="img/img-produto01.png" alt="" class="carrinho__img">
+                <div class="carrinho__item-tx">
+                    <p class="carrinho__tx">Portuguesa (G)</p>
+                    <p class="carrinho__tx">R$ 59,90</p>
+                </div>
+                <div class="carrinho__qtd-controle">
+                    <button class="carrinho__btn btn--adicionar">
+                        <span class="fa-solid fa-plus"></span>
+                    </button>
+                    <span class="carrinho__qtd">0</span>
+                    <button class="carrinho__btn btn--remover">
+                        <span class="fa-solid fa-minus"></span>
+                    </button>
+                </div>
+            </div>
+            <div class="carrinho__item">
+                <img src="img/img-produto01.png" alt="" class="carrinho__img">
+                <div class="carrinho__item-tx">
+                    <p class="carrinho__tx">Portuguesa (G)</p>
+                    <p class="carrinho__tx">R$ 59,90</p>
+                </div>
+                <div class="carrinho__qtd-controle">
+                    <button class="carrinho__btn btn--adicionar">
+                        <span class="fa-solid fa-plus"></span>
+                    </button>
+                    <span class="carrinho__qtd">0</span>
+                    <button class="carrinho__btn btn--remover">
+                        <span class="fa-solid fa-minus"></span>
+                    </button>
+                </div>
+            </div>
+            <div class="carrinho__item">
+                <img src="img/img-produto01.png" alt="" class="carrinho__img">
+                <div class="carrinho__item-tx">
+                    <p class="carrinho__tx">Portuguesa (G)</p>
+                    <p class="carrinho__tx">R$ 59,90</p>
+                </div>
+                <div class="carrinho__qtd-controle">
+                    <button class="carrinho__btn btn--adicionar">
+                        <span class="fa-solid fa-plus"></span>
+                    </button>
+                    <span class="carrinho__qtd">0</span>
+                    <button class="carrinho__btn btn--remover">
+                        <span class="fa-solid fa-minus"></span>
+                    </button>
+                </div>
+            </div>
             <div class="carrinho__item">
                 <img src="img/img-produto01.png" alt="" class="carrinho__img">
                 <div class="carrinho__item-tx">
@@ -184,7 +345,7 @@
                 </div>
             </div>
             <div class="carrinho__calculos">
-                <p class="carrinho__tx tx--item">Subtotal: 
+                <p class="carrinho__tx tx--item">Subtotal:
                     <span class="carrinho__tx tx--valor">R$99,99</span>
                 </p>
                 <p class="carrinho__tx tx--item">Desconto 10%:
@@ -221,9 +382,9 @@
 
     <div id="modal" class="background-modal">
         <div class="modal-pizza">
+            <a href="#" class="modal-pizza__btn-fechar">Voltar</a>
             <img class="modal-pizza__img" src="img/img-produto01.png" alt="Imagem da pizza Mozzarella">
             <div class="modal-pizza__detalhes">
-                <a href="#" class="modal-pizza__btn-fechar">Voltar</a>
                 <h1 class="modal-pizza__tx-titulo">Sabor da Pizza</h1>
                 <div class="modal-pizza__tx-ingredientes">lorem ipsum ingredientes</div>
                 <div class="modal-pizza__tx-tamanho">Tamanho</div>
@@ -242,7 +403,8 @@
                     </div>
                 </div>
                 <div class="modal-pizza__btns">
-                    <button class="modal-pizza__btn modal-pizza__btn--adicionar"><a href="#cart">Adicionar ao carrinho</a></button>
+                    <button class="modal-pizza__btn modal-pizza__btn--adicionar"><a href="#cart">Adicionar ao
+                            carrinho</a></button>
                     <button class="modal-pizza__btn modal-pizza__btn--cancelar">Cancelar</button>
                 </div>
             </div>
