Demos inicio em aprendizagem com transições e animações

--- a/Prof-Bruno/PizzariaVegana/index.html
+++ b/Prof-Bruno/PizzariaVegana/index.html
@@ -31,19 +31,35 @@
                     <div class="hero-btn">
                         <button>Ver Menu</button>
                     </div>
-                    <div class="hero-txt"
+                    <div class="hero-txt">
                     <a href="#">Local Cerca</a>
                 </div>
                 </div>
 
                 <div class="hero__text-icon">
-                    <img src="img/bx_leaf.svg" alt="">
-                    <img src="img/bx_rocket.svg" alt="">
-                    <img src="img/bx_support.svg" alt="">
+                    <div>
+                        <img src="img/bx_leaf.svg" alt="">
+                        <p>Fresco</p>
+                    </div>
+                    <div>
+                        <img class="img-bd" src="img/bx_rocket.svg" alt="">
+                        <p>Rapido</p>
+                    </div>
+                    <div>
+                        <img src="img/bx_support.svg" alt="">
+                        <p>Suporte</p>
+                    </div>
                 </div>
             </div>
             <div class="hero__img">
                 <img src="img/korean-dish-gc0e898cb5_1280 1.png" alt="">
+            </div>
+        </section>
+
+        <section class="especialidades">
+            <div class="especialidade__txt">
+                <h2 class="especialidade__title">Especialidades</h2>
+                <p class="sub__title">da casa</p>
             </div>
         </section>
     </main>
