push para o senac

--- a/Prof-Bruno/PizzariaVegana/index.html
+++ b/Prof-Bruno/PizzariaVegana/index.html
@@ -29,25 +29,25 @@
 
                 <div class="hero__text-btn">
                     <div class="hero-btn">
-                        <button>Ver Menu</button>
+                        <button class="hero__btn">Ver Menu</button>
                     </div>
                     <div class="hero-txt">
-                    <a href="#">Local Cerca</a>
-                </div>
+                        <a href="#">Local Cerca</a>
+                    </div>
                 </div>
 
-                <div class="hero__text-icon">
+                <div class="hero__icon">
                     <div>
                         <img src="img/bx_leaf.svg" alt="">
-                        <p>Fresco</p>
+                        <p class="hero__icon-txt">Fresco</p>
                     </div>
                     <div>
                         <img class="img-bd" src="img/bx_rocket.svg" alt="">
-                        <p>Rapido</p>
+                        <p class="hero__icon-txt">Rapido</p>
                     </div>
                     <div>
                         <img src="img/bx_support.svg" alt="">
-                        <p>Suporte</p>
+                        <p class="hero__icon-txt">Suporte</p>
                     </div>
                 </div>
             </div>
@@ -56,10 +56,43 @@
             </div>
         </section>
 
-        <section class="especialidades">
-            <div class="especialidade__txt">
-                <h2 class="especialidade__title">Especialidades</h2>
+        <section class="specialties">
+            <div class="specialties__txt">
+                <h2 class="specialties__title">Especialidades</h2>
                 <p class="sub__title">da casa</p>
+            </div>
+            <div class="dessert">
+                <div class="dessert__txt">
+                    <h2 class="dessert__sub-title">Sobremesas</h2>
+                    <p class="dessert__description">Iorhute Grego com <br>Sementes e <br>Morangos</p>
+
+                    <p class="dissert__paragraph">Este é um simples texto de preenchimento <br> apenas para preencher e
+                        mostrar onde um <br> texto real da página iria quando estiver <br> concluída</p>
+
+                    <p class="dissert__price">$150</p>
+
+                    <button class="dissert__btn">Fazer pedido!</button>
+                </div>
+                <div class="dessert__img">
+                    <img src="img/granola-gd58857f68_1280 1.png" alt="">
+                </div>
+            </div>
+
+            <div class="lunch">
+                <div class="dessert__txt">
+                    <h2 class="dessert__sub-title">Almoço</h2>
+                    <p class="dessert__description">Sopa de Amendoim <br>com Grão de Bico</p>
+
+                    <p class="dissert__paragraph">Este é um simples texto de preenchimento <br> apenas para preencher e
+                        mostrar onde um <br> texto real da página iria quando estiver <br> concluída</p>
+
+                    <p class="dissert__price">$150</p>
+
+                    <button class="dissert__btn">Fazer pedido!</button>
+                </div>
+                <div class="dessert__img">
+                    <img src="img/vegan-g07dc68689_1280 1.png" alt="">
+                </div>
             </div>
         </section>
     </main>
